# src/routes/comments/index.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express'
+import { auth } from '@/middlewares'
+import { CommentController } from '@/controllers/http'
+
+const commentsRoute = Router()
+
+commentsRoute.post('/comments', auth, CommentController.store)
+
+export default commentsRoute
